# GreenScorePlugin-Rust-Svelte

./: README.md  readme.md
.github/workflows/: backend-ci.yml  deploy.yml  rust-tests.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-28a100f95660fa0b79e16c322ca3bf0c4bba428d81d1b837fa6c3b0da2d716a8.json  query-4c0c29fb3d9f50d5c04e9d5db62e3f64d8df43b42d5991d7c85276873e24167b.json  query-61db335e252678a0ae6bb4eabaf33566a5faffbd419ba80e643bdd04ed351e47.json  query-9c3bb66fc95e0fbe41ace63d536c3d28969d1a0e60a6323e3833e156644910fc.json  query-ec39ff65af04021e74ce061b3b8290a62c55a32a685fa56151cbc84728ffe4c3.json
backend/migrations/: 20260128151309_sql_test.sql
backend/src/: cleanup.rs  green_score.rs  lib.rs  main.rs  models.rs  router.rs  session_store.rs
backend/src/controllers/: account_controller.rs  account_controller_tests.rs  auth_controller.rs  calculation_method.rs  helpers.rs  home_controller.rs  lpc_controller.rs  mo_controller.rs  mod.rs  my_data_controller.rs  plugin_controller.rs
backend/tests/: account_controller_tests.rs  calculation_method_greencore_tests.rs  lpc_controller_test.rs  models_test.rs
db/: greenscoreweb_database.sql
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/: Footer.svelte  Header.svelte  config.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte
plugin/: README.md  manifest.json  package-lock.json  tailwind.config.js
plugin/src/: background.js  config.js  popup.css  popup.html  popup.js
(+72 files in other folders)
