[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.7"
serde_json = "1.0"
tower-sessions = "0.14.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "macros", "mysql"] }
async-trait = "0.1.89"
dotenvy = "0.15.7"
time = "0.3.44"
bcrypt = "0.17.1"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.42"